FIx the leftright button alignment issue

--- a/src/app/components/cv-tagger/cv-tagger.component.css
+++ b/src/app/components/cv-tagger/cv-tagger.component.css
@@ -21,6 +21,10 @@
     font-size: 40px;
 }
 
+.ImageSlider {
+    position: relative;
+}
+
 /* Tablet */
 @media screen and
 (min-width: 601px) and
